--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
     <div class="jumbotron">
         <div class="container">
             <h1 id="szenareti" class="display-3">Szénaréti horgásztó</h1>
+            <h1 id="szenareti" class="display-13">Üzemeltető: Hevesi Tamás</h1>
             <p>A zalai dombok közt megbúvó Kerka-parti kisváros, Lenti bányatavából alakították ki a Szénaréti
                 horgásztavat. A város észak-keleti végén elterülő 6 hektáros horgásztó csodálatos környezetben,
                 folyamatosan bővülő szolgáltatásokkal várja mind a horgászokat, mind a pihenni, kikapcsolódni vágyókat.
